--- a/css/global.css
+++ b/css/global.css
@@ -612,7 +612,7 @@ SECCIONES
 
 @media (min-width: 768px) and (max-width: 1023px) {
     .link-start {
-        font-size: 28px;
+        font-size: 20px;
     }
 }
 
